[gd_scene format=3 uid="uid://blc3xlb7gld2d"]

[ext_resource type="Script" uid="uid://nbqyupn4he5h" path="res://Scripts/Classes/Entities/Items/Switch.gd" id="1_vfmp7"]
[ext_resource type="Texture2D" uid="uid://y81rhybgt7kb" path="res://Assets/Sprites/Items/PSwitch.png" id="2_yk0ke"]
[ext_resource type="Script" uid="uid://caq1qiwmy0mox" path="res://Scripts/Parts/BetterAnimatedSprite.gd" id="3_dcr74"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="4_o5dki"]
[ext_resource type="JSON" path="res://Assets/Sprites/Items/QuestionSwitch.json" id="5_y40fu"]
[ext_resource type="Script" uid="uid://cnheej0sxmoxg" path="res://Scripts/Parts/PlayerDetection.gd" id="6_vbohx"]
[ext_resource type="Script" uid="uid://bx6r8sjar6cwr" path="res://Scripts/Classes/Components/BasicStaticMovement.gd" id="7_2jkle"]
[ext_resource type="Script" uid="uid://b3bokos5jcpr7" path="res://Scripts/Classes/Components/SignalExposer.gd" id="9_bk8mh"]
[ext_resource type="Script" uid="uid://ctfbuoxtnnl0q" path="res://Scripts/Classes/Components/EditorPropertyExposer.gd" id="10_l6y0m"]
[ext_resource type="Script" uid="uid://cmg61722ktg2m" path="res://Scripts/Classes/Components/BlockBouncingDetection.gd" id="10_vfmp7"]
[ext_resource type="Script" uid="uid://bbsgktlhfpqad" path="res://Scripts/Classes/Components/EntityRotator.gd" id="11_yk0ke"]

[sub_resource type="Animation" id="Animation_v4mdn"]
resource_name = "Pressed"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PressedCollision:shape:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PressedCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 5.5)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_i4nd2"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eeyhw"]
_data = {
&"Pressed": SubResource("Animation_v4mdn"),
&"RESET": SubResource("Animation_i4nd2")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_mnfbm"]
atlas = ExtResource("2_yk0ke")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w7q1"]
atlas = ExtResource("2_yk0ke")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4mdn"]
atlas = ExtResource("2_yk0ke")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4nd2"]
atlas = ExtResource("2_yk0ke")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_eeyhw"]
animations = [{
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_mnfbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w7q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4mdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w7q1")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4nd2")
}],
"loop": true,
"name": &"Pressed",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_12hsl"]
size = Vector2(12, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofd0i"]
size = Vector2(10, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4mdn"]
size = Vector2(12, 12)

[node name="QuestionSwitch" type="CharacterBody2D" unique_id=1279299375]
collision_layer = 33
collision_mask = 6
script = ExtResource("1_vfmp7")

[node name="BasicStaticMovement" type="Node" parent="." unique_id=443429655]
script = ExtResource("7_2jkle")
auto_call = false
metadata/_custom_type_script = "uid://bx6r8sjar6cwr"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1620868009]
libraries/ = SubResource("AnimationLibrary_eeyhw")

[node name="SignalExposer" type="Node2D" parent="." unique_id=200280199]
script = ExtResource("9_bk8mh")
do_animation = false
metadata/_custom_type_script = "uid://b3bokos5jcpr7"

[node name="EditorPropertyExposer" type="Node" parent="." unique_id=853085131]
script = ExtResource("10_l6y0m")
properties = Array[String](["has_gravity", "direction"])
metadata/_custom_type_script = "uid://ctfbuoxtnnl0q"

[node name="BlockBouncingDetection" type="Node" parent="." unique_id=333659751 node_paths=PackedStringArray("hitbox")]
script = ExtResource("10_vfmp7")
hitbox = NodePath("../PlayerDetection")
metadata/_custom_type_script = "uid://cmg61722ktg2m"

[node name="Rotator" type="Node" parent="." unique_id=865841856 node_paths=PackedStringArray("rotation_joint")]
script = ExtResource("11_yk0ke")
rotation_joint = NodePath("..")
directions = {
0: 0,
1: 180
}

[node name="Sprite" type="AnimatedSprite2D" parent="." unique_id=949971211]
sprite_frames = SubResource("SpriteFrames_eeyhw")
animation = &"Idle"
autoplay = "Idle"
offset = Vector2(0, 1)
script = ExtResource("3_dcr74")
do_offset = false
metadata/_custom_type_script = "uid://caq1qiwmy0mox"

[node name="ResourceSetterNew" type="Node" parent="Sprite" unique_id=1133385787 node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("4_o5dki")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("5_y40fu")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="PressedCollision" type="CollisionShape2D" parent="." unique_id=53196333]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_12hsl")
one_way_collision = true

[node name="PlayerDetection" type="Area2D" parent="." unique_id=311460949]
position = Vector2(0, 6)
script = ExtResource("6_vbohx")
metadata/_custom_type_script = "uid://cnheej0sxmoxg"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection" unique_id=1895878029]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_ofd0i")

[node name="LCollision" type="CollisionShape2D" parent="." unique_id=1654539811]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("RectangleShape2D_v4mdn")
one_way_collision = true

[node name="RCollision" type="CollisionShape2D" parent="." unique_id=1866253382]
position = Vector2(0, 2)
rotation = -1.5708
shape = SubResource("RectangleShape2D_v4mdn")
one_way_collision = true

[connection signal="switch_pressed" from="." to="SignalExposer" method="emit_pulse"]
[connection signal="recieved_power" from="SignalExposer" to="." method="restore"]
[connection signal="recieved_pulse" from="SignalExposer" to="." method="restore"]
[connection signal="block_bounced" from="BlockBouncingDetection" to="." method="bump_up" unbinds=1]
[connection signal="player_entered" from="PlayerDetection" to="." method="on_player_entered"]
